--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
                 <div class="form-group">
                     <label for="role">Login As</label>
                     <select id="role" name="role" required>
-                        <option value="">Select Role</option>
-                        <option value="user">User</option>
+                        <option value="user" selected>User</option>
                         <option value="admin">Admin</option>
                     </select>
                 </div>
