--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
             <div class="register-link">
                 <p>Don't have an account? <a href="#" id="registerLink">Register here</a></p>
             </div>
+            
+            <div class="demo-info" style="margin-top: 20px; padding: 15px; background-color: #e8f4fd; border: 1px solid #b3d9ff; border-radius: 5px; text-align: center;">
+                <p style="margin: 0; color: #2c5aa0; font-size: 14px;"><strong>Demo Credentials Available</strong></p>
+                <p style="margin: 5px 0 0 0; color: #2c5aa0; font-size: 12px;">Click "Show Demo Credentials" button below to test the system</p>
+            </div>
         </div>
     </div>
 
