--- a/pages/tracking.html
+++ b/pages/tracking.html
@@ -157,7 +157,7 @@
     <script src="../js/core/storage.js"></script>
     <script src="../js/core/auth.js"></script>
     <script src="../js/core/api.js"></script>
-    <script src="../js/modules/modal.js"></script>
-    <script src="../js/pages/tracking.js"></script>
+    <script src="../js/Module/modal.js"></script>
+    <script type="module" src="../js/pages/tracking.js"></script>
 </body>
 </html>
