--- a/pages/admin.html
+++ b/pages/admin.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <div class="header">
-        <h1>Admin Panel - All Purchase Orders</h1>
+        <div class="header-brand">
+            <img src="../asset/images/apex-logo.svg" alt="Apex Building Group" class="header-logo">
+            <h1>Admin Panel - All Purchase Orders</h1>
+        </div>
         <div class="user-info">
             <span id="welcomeAdmin">Welcome, Admin</span>
             <button id="logoutBtn" class="logout-btn" onclick="if(confirm('Are you sure you want to logout?')) { auth.logout(); }">Logout</button>
