--- a/pages/form.html
+++ b/pages/form.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="nav-brand">Purchase Order Form</div>
+        <div class="nav-brand">
+            <img src="../asset/images/apex-logo.svg" alt="Apex Building Group" class="nav-logo">
+            Purchase Order Form
+        </div>
         <div class="nav-menu">
             <button id="backBtn" class="btn btn-secondary" onclick="testBackButton()">Back to Dashboard</button>
             <button id="logoutBtn" class="btn btn-secondary" onclick="handleLogout()">Logout</button>
