--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <div class="login-container">
         <div class="login-form">
             <div class="logo">
-                <h1>APEX PO SYSTEM</h1>
+                <img src="asset/images/apex-logo.svg" alt="Apex Building Group" class="company-logo">
+                <h1>PO SYSTEM</h1>
             </div>
             
             <form id="loginForm">
