--- a/pages/tracking.html
+++ b/pages/tracking.html
@@ -92,8 +92,7 @@
             <div class="list-header">
                 <h2>Purchase Orders</h2>
                 <div class="list-actions">
-                    <button id="newPOBtn" class="btn btn-primary" onclick="testNewPOClick()" style="z-index: 9999; pointer-events: auto; position: relative;">➕ New PO</button>
-                    <button id="testBtn" class="btn btn-secondary" onclick="alert('Test button works!')">🔧 Test</button>
+                    <button id="newPOBtn" class="btn btn-primary">➕ New PO</button>
                     <button id="refreshList" class="btn btn-secondary">🔄 Refresh</button>
                     <button id="exportList" class="btn btn-secondary">📥 Export</button>
                 </div>
