--- a/pages/form.html
+++ b/pages/form.html
@@ -528,9 +528,9 @@
                         // Collect form data
                         const formData = window.poForm.collectFormData();
 
-                        // Validate required fields
-                        if (!formData.meta.projectName || !formData.schedule.length) {
-                            alert('Please fill out project name and add at least one schedule item');
+                        // Validate required fields - Allow empty values for now
+                        if (!formData.meta.projectName) {
+                            alert('Please fill out at least the project name');
                             return;
                         }
 
